# ADAPT-HD

./: README.md  pyproject.toml  requirements.txt
adapthd/: __init__.py  config.py
adapthd/data/: __init__.py  preprocessing.py
adapthd/io/: __init__.py  bptx.py  serialization.py
adapthd/models/: __init__.py  adapthd.py  layers.py  quant.py
adapthd/training/: __init__.py  evaluate.py  train.py
adapthd/utils/: __init__.py  metrics.py
configs/: configs.yaml
scripts/: export.py  train.py
